--- a/style/header.css
+++ b/style/header.css
@@ -12,7 +12,7 @@ header .container {
     display: flex;
     gap: 32px;
 }
-#profile img:first-child {
+#profile img:nth-child(1) {
     border-radius: 50%;
 }
 #profile > div {
